--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
+
 .wrapper {
-    padding-left: 200px;
+    padding-left: 750px;
 }
 
 
-.name {
-    color:black;
-    font-weight: 700;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 20px;
-}
-.message {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 500;
-}
-.time {
-    color: black;
-    font-weight: 500;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: right;
-}
 
-/*@media all and (max-width: 500px) {
-    .wrapper {
-        padding-left: 75px;
-    }
-
-    .cloud:before {
-        width: 50px;
-        height: 50px;
-        left: -70px;
-    }
-
-    .cloud:after {
-        border-width: 10px;
-        left: -10px;
-    }
-}*/
